--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="textNickname">enter the player\'s nickname</string>
     <string name="back">Back</string>
     <string name="test">TextView</string>
+    <string name="username">username</string>
 </resources>
