--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="textNickname">enter the player\'s nickname</string>
     <string name="back">Back</string>
     <string name="test">TextView</string>
-    <string name="username">username</string>
-    <string name="performance">pp</string>
-    <string name="globalRank">globalRank</string>
-    <string name="country">country</string>
+    <string name="username">username:</string>
+    <string name="performance">pp:</string>
+    <string name="country">country:</string>
+    <string name="global_ranking">Global Ranking: </string>
 </resources>
