--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="performancePointView">Performance Point:</string>
     <string name="countryView">Country:</string>
     <string name="globalRankView">Global Rank:</string>
+    <string name="by">by</string>
+    <string name="title">title</string>
+    <string name="artist">artist</string>
+    <string name="difficulty">difficulty</string>
+    <string name="mods">mods</string>
+    <string name="accuracy">accuracy</string>
+    <string name="pp">pp</string>
 </resources>
